--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="ja">
-  <head>
+  <html lang="ja">
+    <head>
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-      <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet">
+      <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css">
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome-animation/0.0.10/font-awesome-animation.css" type="text/css" media="all" />
       <link rel="stylesheet" href="./css/bootstrap.min.css">
       <link rel="stylesheet" href="./css/custom.css">
@@ -12,107 +12,80 @@
     </head>
     <body>
         <!-- nav -->
-        <nav class="navbar navbar-expand-md navbar-dark bg-primary shadow sticky-top">
-            <div class="container">
-                <a class="navbar-brand shadow" href="#"><i class="fas fa-briefcase"></i>Portfolio</a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar-content" aria-controls="navbar-content" aria-expanded="false" aria-label="Toggple navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-
-              <div class="collapse navbar-collapse" id="navbar-content">
+        <nav class="navbar navbar-expand-md navbar-dark bg-dark shadow sticky-top">
+          <div class="container">
+            <a class="navbar-brand shadow" href="#"><i class="fas fa-briefcase"></i><span class="ml-2">Portfolio</span></a>
+              <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar-content" aria-controls="navbar-content" aria-expanded="false" aria-label="Toggple navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+                <div class="collapse navbar-collapse" id="navbar-content">
                   <ul class="navbar-nav mr-auto">
-                      <li class="nav-item active">
-                          <a class="nav-link" href="#">Top <span class="sr-only">(current)</span></a>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link" href="#">About</a>
+                    <li class="nav-item active">
+                      <a class="nav-link" href="#">Top <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Login</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Sign up</a>
+                      <a class="nav-link" href="#">About</a>
                     </li>
                   </ul>
-
-                  <ul class="navbar-nav">
-                      <li class="nav-item">
-                          <a href="#" class="nav-link btn btn-info">Contact</a>
-                      </li>
-                  </ul>
-              </div>
-            </div>
+                </div>
+          </div>
         </nav>
         <!-- /nav bar -->
-        
-        <!-- jumbotron -->
-        <div class="jumbotron jumbotron-fluid">
-        　 <h1 class="display-3 text-center">Welcome !</h1>
-                <!-- carousel -->
-            　<div class="container">
-                <div class="carousel slide" id="main_visual" data-ride="carousel">
-                    <ol class="carousel-indicators">
-                        <li data-target="#main_visual" data-slide-to="0" class="active"></li>
-                        <li data-target="#main_visual" data-slide-to="1"></li>
-                        <li data-target="#main_visual" data-slide-to="2"></li>
-                        <li data-target="#main_visual" data-slide-to="3"></li>
-                    </ol>
-                <div id="carouselContrls" class="carousel slide" data-ride="carousel">   
-                      <div class="carousel-inner">
-                        <div class="carousel-item active">
-                            <img src="./image/logo2-4.png" class="img-fluid" alt="logo">
-                           　　 <div class="carousel-caption d-none d-md-block">
-                             　　　 <p class="lead">This is smple text</p>
-                            　　</div>
-                        </div>
-                        <!-- second slide -->
-                        <div class="carousel-item">
-                            <img src="./image/logo2-2.png" class="img-fluid" alt="logo2">
-                            <div class="carousel-caption d-none d-md-block">
-                                <p class="lead">This is smple text</p>
-                            </div>
-                        </div>
-                        <!-- third slide -->
-                        <div class="carousel-item">
-                            <img src="./image/logo2-3.png" class="img-fluid" alt="logo3">
-                            <div class="carousel-caption d-none d-md-block">
-                                <p class="lead">This is smple text</p>
-                            </div>
-                        </div>
-                        <!-- forth slide -->
-                        <div class="carousel-item">
-                            <img src="./image/logo2-4.png" class="img-fluid" alt="logo4">
-                            <div class="carousel-caption d-none d-md-block">
-                                <p class="lead">This is smple text</p>
-                            </div>
-                        </div>
-                      </div>
-                      <!-- controller -->
-                      <a class="carousel-control-prev" href="#main_visual" role="button" data-slide="prev">
-                          <span class="carousel-control-prev-icon bg-dark" aria-hidden="true"></span>
-                          <span class="sr-only">Back</span>
-                      </a>
-                      <a class="carousel-control-next" href="#main_visual" role="button" data-slide="next">
-                          <span class="carousel-control-next-icon bg-dark" aria-hidden="true"></span>
-                          <span class="sr-only">Next</span>
-                      </a>
-                  </div>
-               </div>
-                <!-- /carousel -->
+
+        <!-- animation -->
+          <!-- <div class="py-4">
+            <div class="container">
+              <div class="scene" id="scene-3">
+                    <div class="mask" id="apple-1">
+                        <img src="./img/logo2-1.png" alt="slide">
+                        <div class="bar"></div>
+                        <div class="line"></div>
+                    </div>
+                    <div class="mask" id="apple-2">
+                        <img src="./img/logo2-2.png" alt="slide">
+                        <div class="bar"></div>
+                        <div class="line"></div>
+                    </div>
+                    <div class="mask" id="apple-3">
+                        <img src="./img/logo2-3.png" alt="slide">
+                        <div class="bar"></div>
+                        <div class="line"></div>
+                    </div>
+                    <div class="mask" id="apple-4">
+                        <img src="./img/logo2-4.png" alt="slide">
+                        <div class="bar"></div>
+                        <div class="line"></div>
+                    </div>
+              </div>
             </div>
-        </div>
-        <!-- /jumbotron -->
-        <!-- main -->
-          <!-- content01 -->
-         <div class="py-4">
-           <div class="container">
-                <h2 class="mb-4 text-center display-3 skills-heading">My Skills</h2>
-                <div class="row py-4">
+          </div> -->
+        <!-- /animation -->
+
+        <!-- About -->  
+        <div class="py-4 about" id="about">
+          <div class="container">
+            <h2 class="text-center display-3 heading">About Me</h2>
+              <div class="row mt-2">
+                <p class="col-md-6 mt-5">2019年3月からプログラミング学習を開始。<br>HTML／CSS, JS, jQuery, Ruby, Ruby on Railsなどを学習。<br>
+                    その後Portfolioサイト２つとWeb Applicationを２つ制作しました。<br>
+                    エクササイズが趣味の一つでニュージーランドに住んでいた時は<br>
+                    キックボクシングを7ヶ月程してました。</p>
+                <img src="./img/nz.jpeg" class="col-md-6 aboutLogo" alt="logo">
+              </div>
+          </div>
+        <div>
+        <!-- /ABout -->
+        
+    　<!-- Skills　 -->
+      <div class="py-4 bg-dark text-white">
+        <div class="container">
+          <h2 class="mb-4 text-center display-3 skills-heading">My Skills</h2>
+            <div class="row py-4">
                     <!-- skills -->
                 <div class="col-md-3 ml-md-auto">
                     <i class="far fa-lightbulb faa-float animated skills-icon"></i>
                     <h3>IDEA</h3>
-                    <p>idea comes <strong>all the sudden</strong> idea comes all the suddenidea comes all the suddenidea comes all the sudden</p>
+                    <p><strong>all the sudden</strong> idea comes all the suddenidea comes all the suddenidea comes all the sudden</p>
                 </div>
                 <div class="col-md-3 ml-md-auto">
                     <i class="fas fa-globe-americas faa-float animated skills-icon"></i>
@@ -125,13 +98,14 @@
                     <p>idea comes <strong>all the sudden</strong> idea comes all the suddenidea comes all the suddenidea comes all the sudden</p>
                 </div>
             </div>
-            </div>
-          </div>
+        </div>
+       </div>
 
           <!-- /content01 -->
           <!-- content02 -->
           <div class="py-4">
               <div class="container">
+                  <h2 class="mb-4 text-center display-3">My Work</h2>
                   <div class="row">
                   <!-- alert -->
                     <div class="alert alert-success col-4" role="alert">
@@ -271,9 +245,6 @@
         <!--  footer -->
         <footer class="py-4 bg-primary">
           <div class="container text-center">
-              <button type="button" class="back-to-back">
-                  <span class="label">Top</span>
-              </button>
               <small class="copyright text-white">&copy;2020;
                   <a href="#">Portfolio</a>
               </small>
@@ -282,8 +253,7 @@
         <!-- /footer -->  
       <script src="./js/vendor/jquery-1.10.2.min.js"></script>
       <script src="./js/vendor/jquery-ui-1.10.3.custom.min.js"></script>
-      <script src="./js/jquery-3.3.1.slim.min.js"></script>
       <script src="./js/bootstrap.bundle.min.js"></script>
       <script src="./js/index.js"></script>
-        </body>
+    </body>
 </html>
