--- a/index.html
+++ b/index.html
@@ -33,32 +33,32 @@
         <!-- /nav bar -->
 
         <!-- animation -->
-          <!-- <div class="py-4">
+          <div class="py-4">
             <div class="container">
               <div class="scene" id="scene-3">
                     <div class="mask" id="apple-1">
-                        <img src="./img/logo2-1.png" alt="slide">
+                        <img src="./img/nz.jpeg" alt="slide">
                         <div class="bar"></div>
                         <div class="line"></div>
                     </div>
                     <div class="mask" id="apple-2">
-                        <img src="./img/logo2-2.png" alt="slide">
+                        <img src="./img/user.top.jpeg" alt="slide">
                         <div class="bar"></div>
                         <div class="line"></div>
                     </div>
                     <div class="mask" id="apple-3">
-                        <img src="./img/logo2-3.png" alt="slide">
+                        <img src="./img/logo1.png" alt="slide">
                         <div class="bar"></div>
                         <div class="line"></div>
                     </div>
                     <div class="mask" id="apple-4">
-                        <img src="./img/logo2-4.png" alt="slide">
+                        <img src="./img/nz4.jpg" alt="slide">
                         <div class="bar"></div>
                         <div class="line"></div>
                     </div>
               </div>
             </div>
-          </div> -->
+          </div>
         <!-- /animation -->
 
         <!-- About -->  
@@ -66,15 +66,15 @@
           <div class="container">
             <h2 class="text-center display-3 heading">About Me</h2>
               <div class="row mt-2">
+                <img src="./img/nz.jpeg" class="col-md-4 aboutLogo" alt="logo">
                 <p class="col-md-6 mt-5">2019年3月からプログラミング学習を開始。<br>HTML／CSS, JS, jQuery, Ruby, Ruby on Railsなどを学習。<br>
                     その後Portfolioサイト２つとWeb Applicationを２つ制作しました。<br>
                     エクササイズが趣味の一つでニュージーランドに住んでいた時は<br>
                     キックボクシングを7ヶ月程してました。</p>
-                <img src="./img/nz.jpeg" class="col-md-6 aboutLogo" alt="logo">
               </div>
           </div>
         <div>
-        <!-- /ABout -->
+      <!-- /About -->
         
     　<!-- Skills　 -->
       <div class="py-4 bg-dark text-white">
@@ -84,83 +84,57 @@
                     <!-- skills -->
                 <div class="col-md-3 ml-md-auto">
                     <i class="far fa-lightbulb faa-float animated skills-icon"></i>
-                    <h3>IDEA</h3>
-                    <p><strong>all the sudden</strong> idea comes all the suddenidea comes all the suddenidea comes all the sudden</p>
+                    <h3>Programming</h3>
+                    <p>HTML&CSSを6ヶ月JS・jQueryを4ヶ月<br>Ruby・Ruby on Railsを４ヶ月程学習しながら<br>ポートフォリオサイト二つWeb applicationを二つ作成しました</p>
                 </div>
                 <div class="col-md-3 ml-md-auto">
                     <i class="fas fa-globe-americas faa-float animated skills-icon"></i>
                     <h3>English</h3>
-                    <p>idea comes <strong>all the sudden</strong> idea comes all the suddenidea comes all the suddenidea comes all the sudden</p>
+                    <p>オーストラリアとニュージーランドに２年間滞在していました<br>海外ドラマや英語で書いてある本を読んだりするのは趣味の一つです</p>
                 </div>
                 <div class="col-md-3 ml-md-auto">
                     <i class="fas fa-dumbbell faa-float animated skills-icon"></i>
                     <h3>Training</h3>
-                    <p>idea comes <strong>all the sudden</strong> idea comes all the suddenidea comes all the suddenidea comes all the sudden</p>
+                    <p>運動するのが趣味でジムに週５通ってトレーニングしたり<br>学生時代の仲間と一緒にサッカーしたりして汗を流しています</p>
                 </div>
             </div>
         </div>
        </div>
 
-          <!-- /content01 -->
-          <!-- content02 -->
-          <div class="py-4">
-              <div class="container">
-                  <h2 class="mb-4 text-center display-3">My Work</h2>
-                  <div class="row">
-                  <!-- alert -->
-                    <div class="alert alert-success col-4" role="alert">
-                        <h4 class="alert-heading">other work</h4>
-                        <hr>
-                        <p class="mb-0">check it out </p>
-                        <a href="#" class="alert-link"><i class="fas fa-link faa-spin animated link-logo"></i></a>
-                    </div>
-
-                    <div class="alert alert-success col-4" role="alert">
-                        <h4 class="alert-heading">other work</h4>
-                        <hr>
-                        <p class="mb-0">check it out </p>
-                        <a href="#" class="alert-link"><i class="fas fa-link faa-spin animated link-logo"></i></a>
-                    </div>
-
-                    <div class="alert alert-success col-4" role="alert">
-                        <h4 class="alert-heading">other work</h4>
-                        <hr>
-                        <p class="mb-0">check it out </p>
-                        <a href="#" class="alert-link"><i class="fas fa-link faa-spin animated link-logo"></i></a>
-                    </div>
-                  </div>
-               </div>
-            </div>
+          <!-- /Skills -->
+                  
+            <!-- Portfolio section -->
         <div class="py-4">
-           <div class="container">
+          <div class="container" id="buttons1">
+            <h2 class="mb-4 text-center display-3 heading">Portfolio</h2>
                     <!-- card -->
-                 <div class="row">
-                    <div class="col-md-4">
-                        <!-- card1 -->
+              <div class="row justify-content-center">
+                     <!-- card1 -->
+                     <div class="py-4 col-8 col-md-4">  
                         <div class="card mb-3">
-                          <img class="card-img-top img-fluid" src="./image/card-1.jpeg" alt="card1">
+                          <img class="card-img-top img-fluid" src="./img/logo1.png" alt="card1">
                             <div class="card-body d-flex justify-content-between">
-                                <h4 class="card-title text-secondary">Work1</h4>
-                                <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#modal01">go page</button>
+                                <h4 class="card-title text-secondary">Suggest</h4>
+                                <button type="button" class="btn inner clearfix" data-toggle="modal" data-target="#modal01">Albatross</button>
                             </div>
                          </div>
                      </div>
                         <!-- card2 -->
-                      <div class="col-md-4">
+                      <div class="py-4 col-8 col-md-4">
                         <div class="card mb-3">
-                            <img class="card-img-top img-fluid" src="./image/card-2.jpeg" alt="card2">
+                            <img class="card-img-top img-fluid" src="./img/logo.png" alt="card2">
                               <div class="card-body d-flex justify-content-between">
-                                 <h4 class="card-title text-secondary">Work2</h4>
+                                 <h4 class="card-title text-secondary">Tips</h4>
                                  <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#modal02">go page</button>
                               </div>
                         </div>
                       </div>
                         <!-- card3 -->
-                      <div class="col-md-4">
+                      <div class="py-4 col-8 col-md-4">
                         <div class="card mb-3">
-                            <img class="card-img-top img-fluid" src="./image/card-3.jpeg" alt="card3">
+                            <img class="card-img-top img-fluid" src="./img/user.top.jpeg" alt="card3">
                               <div class="card-body d-flex justify-content-between">
-                                 <h4 class="card-title text-secondary">Work3</h4>
+                                 <h4 class="card-title text-secondary">Portfolio</h4>
                                  <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#modal03">go page</button>
                               </div>
                         </div>
@@ -171,15 +145,15 @@
                         <div class="modal-dialog modal-dialog-centered" role="document">
                             <div class="modal-content">
                                 <div class="modal-header">
-                                    <h5 class="modal-title" id="modal01-label">Work1</h5>
+                                    <h5 class="modal-title" id="modal01-label">Sugget</h5>
                                         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                                             <span aria-hidden="true">&times;</span>
                                         </button>
                                 </div>
                                 <!-- modal body -->
                                 <div class="modal-body">
-                                    <p class="text-center"><img src="image/card-1.jpeg" alt="logo1" class="img-fluid"></p>
-                                    <p>My work1 </p>
+                                    <p class="text-center"><a href="#"><img src="img/logo1.png" alt="logo1" class="img-fluid"></a></p>
+                                    <p>suggest App</p>
                                 </div>
                                 <!-- card footer -->
                                 <div class="modal-footer">
@@ -194,15 +168,15 @@
                         <div class="modal-dialog modal-dialog-centered" role="document">
                             <div class="modal-content">
                                 <div class="modal-header">
-                                    <h5 class="modal-title" id="modal02-label">Work2</h5>
+                                    <h5 class="modal-title" id="modal02-label">Tips</h5>
                                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                                         <span aria-hidden="true">&times;</span>
                                     </button>
                                 </div>
                                 <!-- modal body -->
                                 <div class="modal-body">
-                                    <p class="text-center"><img src="image/card-2.jpeg" alt="logo3" class="img-fluid"></p>
-                                    <p>My work2 </p>
+                                    <p class="text-center"><a href="#"><img src="img/logo.png" alt="logo2" class="img-fluid"></a></p>
+                                    <p>Tips App </p>
                                 </div>
                                 <!-- card footer -->
                                 <div class="modal-footer">
@@ -213,20 +187,19 @@
                     </div>
                     <!-- /modal 2 -->
                     <!-- modal3 -->
-                    <!-- modal -->
                     <div class="modal fade" id="modal03" tabindex="-1" role="dialog" aria-labelledby="modal03-label" aria-hidden="true">
                         <div class="modal-dialog modal-dialog-centered" role="document">
                             <div class="modal-content">
                                 <div class="modal-header">
-                                    <h5 class="modal-title" id="modal03-label">Work3</h5>
+                                    <h5 class="modal-title" id="modal03-label">Portfolio</h5>
                                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                                         <span aria-hidden="true">&times;</span>
                                     </button>
                                 </div>
                                 <!-- modal body -->
                                 <div class="modal-body">
-                                    <p class="text-center"><img src="image/card-3.jpeg" alt="logo1" class="img-fluid"></p>
-                                    <p>My work3 </p>
+                                    <p class="text-center"><a href="#"><img src="img/user.top.jpeg" alt="logo3" class="img-fluid"></a></p>
+                                    <p>Portfolio site</p>
                                 </div>
                                 <!-- card footer -->
                                 <div class="modal-footer">
@@ -234,26 +207,39 @@
                                 </div>
                             </div>
                         </div>
-                    </div>
-                    <!-- /modal 1 -->
+                     </div>
+                    <!-- /modal 3 -->
                  </div>
              </div>
-            </div>
+  
         </div>
              <!-- /card -->
           <!-- /content02 -->
         <!--  footer -->
-        <footer class="py-4 bg-primary">
+        <footer class="py-4 bg-dark">
           <div class="container text-center">
-              <small class="copyright text-white">&copy;2020;
-                  <a href="#">Portfolio</a>
-              </small>
+            <!-- nav -->
+            <ul class="nav justify-content-center mb-3">
+                <li class="nav-item">
+                    <a class="nav-link text-white" href="#">Top</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link text-white" href="#about">About</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link text-white" href="login.html">Login</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link text-white" href="signup.html">Signup</a>
+                </li>
+            </ul>
           </div>
         </footer>
-        <!-- /footer -->  
+      <!-- /footer -->  
       <script src="./js/vendor/jquery-1.10.2.min.js"></script>
       <script src="./js/vendor/jquery-ui-1.10.3.custom.min.js"></script>
-      <script src="./js/bootstrap.bundle.min.js"></script>
+      <script src="./js/vendor/imagesloaded.pkgd.min.js"></script>
+      <script src="./js/vendor/bootstrap.bundle.min.js"></script>
       <script src="./js/index.js"></script>
     </body>
 </html>
