jquery fly animation add

--- a/index.html
+++ b/index.html
@@ -60,12 +60,12 @@
         <!-- /animation -->
 
         <!-- About -->  
-        <div class="about bg-white" id="about">
+        <div class="bg-white " id="about">
           <div class="container">
-            <h2 class="text-center display-3 heading">About Me</h2>
+            <h2 class="text-center display-3 heading full-block fly">About Me</h2>
               <div class="row mt-2 align-items-center">
-                <img src="./img/nz.jpeg" class="col-md-4 col-6 aboutLogo" style="height: auto;" alt="logo">
-                <p class="col-md-6 text-center">2019年3月からプログラミング学習を開始。<br>HTML／CSS, JS, jQuery, Ruby, Ruby on Railsなどを学習。<br>
+                <img src="./img/nz.jpeg" class="col-md-4 col-6 aboutLogo fly" style="height: auto;" alt="logo">
+                <p class="col-md-6 text-center fly">2019年3月からプログラミング学習を開始。<br>HTML／CSS, JS, jQuery, Ruby, Ruby on Railsなどを学習。<br>
                     その後Portfolioサイト２つとWeb Applicationを２つ制作しました。<br>
                     エクササイズが趣味の一つでニュージーランドに住んでいた時は<br>
                     キックボクシングを7ヶ月程してました。</p>
@@ -110,7 +110,7 @@
                      <!-- card1 -->
                      <div class="py-4 col-8 col-md-4">  
                         <div class="card mb-3">
-                          <img class="card-img-top img-fluid" src="./img/logo1.png" alt="card1">
+                          <img class="card-img-top img-fluid" src="./img/suggest.png" alt="card1">
                             <div class="card-body d-flex justify-content-between">
                                 <h4 class="card-title text-secondary">Suggest</h4>
                                 <button type="button" class="btn inner clearfix" data-toggle="modal" data-target="#modal01">Check</button>
@@ -120,7 +120,7 @@
                         <!-- card2 -->
                       <div class="py-4 col-8 col-md-4">
                         <div class="card mb-3">
-                            <img class="card-img-top img-fluid" src="./img/logo.png" alt="card2">
+                            <img class="card-img-top img-fluid" src="./img/tips.png" alt="card2">
                               <div class="card-body d-flex justify-content-between">
                                  <h4 class="card-title text-secondary">Tips</h4>
                                  <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#modal02">Check</button>
@@ -150,7 +150,7 @@
                                 </div>
                                 <!-- modal body -->
                                 <div class="modal-body">
-                                    <p class="text-center"><a href="#"><img src="img/logo1.png" alt="logo1" class="img-fluid"></a></p>
+                                    <p class="text-center"><a href="#"><img src="img/suggest.png" alt="logo1" class="img-fluid"></a></p>
                                     <p>suggest App</p>
                                 </div>
                                 <!-- card footer -->
@@ -173,7 +173,7 @@
                                 </div>
                                 <!-- modal body -->
                                 <div class="modal-body">
-                                    <p class="text-center"><a href="#"><img src="img/logo.png" alt="logo2" class="img-fluid"></a></p>
+                                    <p class="text-center"><a href="#"><img src="img/tips.png" alt="logo2" class="img-fluid"></a></p>
                                     <p>Tips App </p>
                                 </div>
                                 <!-- card footer -->
@@ -230,6 +230,8 @@
       <script src="./js/vendor/jquery-1.10.2.min.js"></script>
       <script src="./js/vendor/jquery-ui-1.10.3.custom.min.js"></script>
       <script src="./js/vendor/jquery.ba-throttle-debounce.min.js"></script>
+      <script src="./js/vendor/modernizr.js"></script>
+      <script src="./js/vendor/parallax.js"></script>
       <script src="./js/vendor/bootstrap.bundle.min.js"></script>
       <script src="./js/index.js"></script>
     </body>
