--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
 
       <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css">
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome-animation/0.0.10/font-awesome-animation.css" type="text/css" media="all" />
-      <link rel="stylesheet" href="./css/parallax.css">
       <link rel="stylesheet" href="./css/bootstrap.min.css">
       <link rel="stylesheet" href="./css/custom.css">
       <title>Portfolio</title>
@@ -37,22 +36,22 @@
        
           　　<div class="scene" id="scene-3">
                     <div class="mask" id="slide-1">
-                        <img src="./img/slides-img1.jpeg" alt="slide">
+                        <img src="./img/slide1.jpg" alt="slide">
                         <div class="bar"></div>
                         <div class="line"></div>
                     </div>
                     <div class="mask" id="slide-2">
-                        <img src="./img/slides-img2.jpeg" alt="slide">
+                        <img src="./img/slide2.jpg" alt="slide">
                         <div class="bar"></div>
                         <div class="line"></div>
                     </div>
                     <div class="mask" id="slide-3">
-                        <img src="./img/slides-img3.jpeg" alt="slide">
+                        <img src="./img/slide4.jpg" alt="slide">
                         <div class="bar"></div>
                         <div class="line"></div>
                     </div>
                     <div class="mask" id="slide-4">
-                        <img src="./img/slides-img4.jpeg" alt="slide">
+                        <img src="./img/slide5.jpg" alt="slide">
                         <div class="bar"></div>
                         <div class="line"></div>
                     </div>
@@ -65,7 +64,7 @@
           <div class="container">
             <h2 class="text-center display-3 heading full-block fly">About Me</h2>
               <div class="row mt-2 align-items-center">
-                <img src="./img/nz.jpeg" class="col-md-4 col-6 aboutLogo fly" style="height: auto;" alt="logo">
+                <img src="./img/main.png" class="col-md-4 col-6 aboutLogo fly" style="height: auto;" alt="logo">
                 <p class="col-md-6 text-center fly">2019年3月からプログラミング学習を開始。<br>HTML／CSS, JS, jQuery, Ruby, Ruby on Railsなどを学習。<br>
                     その後Portfolioサイト２つとWeb Applicationを２つ制作しました。<br>
                     エクササイズが趣味の一つでニュージーランドに住んでいた時は<br>
@@ -128,18 +127,6 @@
                         </div>
                       </div>
 
-                        <!------------------- card3 ------------------->
-                      <!-- <div class="py-4 col-4 col-md-4">
-                        <div class="card mb-3">
-                            <img class="card-img-top img-fluid" src="./img/user.top.jpeg" alt="card3">
-                              <div class="card-body d-flex justify-content-between">
-                                 <h4 class="card-title text-secondary">Portfolio</h4>
-                                 <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#modal03">Check</button>
-                              </div>
-                        </div>
-                      </div> -->
-                    <!------------------- /card3 ------------------->
-
                     <!------------------- modal ------------------->
                     <div class="modal fade" id="modal01" tabindex="-1" role="dialog" aria-labelledby="modal01-label" aria-hidden="true">
                         <div class="modal-dialog modal-dialog-centered" role="document">
@@ -152,7 +139,7 @@
                                 </div>
                                 <!------------------- modal body ------------------->
                                 <div class="modal-body">
-                                    <p class="text-center"><a href="#"><img src="img/suggest.png" alt="logo1" class="img-fluid"></a></p>
+                                   <a href="https://suggest1.herokuapp.com/" target="_blank"><img src="img/suggest.png" alt="logo1" class="img-fluid"></a>
                                     <p>suggest App</p>
                                 </div>
                                 <!------------------- card footer ------------------->
@@ -185,37 +172,10 @@
                             </div>
                         </div>
                     </div>
-                    <!------------------- /modal 2 ------------------->
-
-                    <!------------------- modal3 ------------------->
-                    <!-- <div class="modal fade" id="modal03" tabindex="-1" role="dialog" aria-labelledby="modal03-label" aria-hidden="true">
-                        <div class="modal-dialog modal-dialog-centered" role="document">
-                            <div class="modal-content">
-                                <div class="modal-header">
-                                    <h5 class="modal-title" id="modal03-label">Portfolio</h5>
-                                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                        <span aria-hidden="true">&times;</span>
-                                    </button>
-                                </div> -->
-                                <!-- modal body -->
-                                <!-- <div class="modal-body">
-                                    <p class="text-center"><a href="#"><img src="img/user.top.jpeg" alt="logo3" class="img-fluid"></a></p>
-                                    <p>Portfolio site</p>
-                                </div> -->
-                                <!-- card footer -->
-                                <!-- <div class="modal-footer">
-                                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                                </div>
-                            </div>
-                        </div> -->
-                     <!-- </div> -->
-                    <!------------------- /modal 3 ------------------->
-
                  </div>
              </div>
         </div>
              <!------------------- /card ------------------->
-      
            <!-------------------  footer ------------------->
         <footer class="py-4" id="footer">
           <div class="container text-center"> 
@@ -237,7 +197,6 @@
       <script src="./js/vendor/jquery-ui-1.10.3.custom.min.js"></script>
       <script src="./js/vendor/jquery.ba-throttle-debounce.min.js"></script>
       <script src="./js/vendor/modernizr.js"></script>
-      <script src="./js/vendor/parallax.js"></script>
       <script src="./js/vendor/bootstrap.bundle.min.js"></script>
       <script src="./js/index.js"></script>
     </body>
