--- a/index.html
+++ b/index.html
@@ -63,10 +63,10 @@
         <div class="bg-white " id="about">
           <div class="container">
             <h2 class="text-center display-3 heading full-block fly">About Me</h2>
-              <div class="row mt-2 align-items-center">
+              <br class="row mt-2 align-items-center">
                 <img src="./img/main.png" class="col-md-4 col-6 aboutLogo fly" style="height: auto;" alt="logo">
                 <p class="col-md-6 text-center fly">2019年3月からプログラミング学習を開始。<br>HTML／CSS, JS, jQuery, Ruby, Ruby on Railsなどを学習。<br>
-                    その後Portfolioサイト２つとWeb Applicationを２つ制作しました。<br>
+                    その後Portfolioサイト１つとWeb Applicationを１つ制作し</br>ただ今新しいWeb Applicationを制作中です。<br>
                     エクササイズが趣味の一つでニュージーランドに住んでいた時は<br>
                     キックボクシングを7ヶ月程してました。</p>
               </div>
