--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     </li>
                   </ul>
                 </div>
-          </div>
+           </div>
         </nav>
         <!------------------- /nav bar ------------------->
 
@@ -64,11 +64,12 @@
           <div class="container">
             <h2 class="text-center display-3 heading full-block fly">About Me</h2>
               <div class="row mt-2 align-items-center">
-                <img src="./img/main.png" class="col-md-4 col-6 aboutLogo fly" style="height: auto;" alt="logo">
-                <p class="col-md-6 text-center fly">2019年3月からプログラミング学習を開始。<br>HTML／CSS, JS, jQuery, Ruby, Ruby on Railsなどを学習。<br>
-                    その後Portfolioサイト１つとWeb Applicationを１つ制作し</br>ただ今新しいWeb Applicationを制作中です。<br>
-                    エクササイズが趣味の一つでニュージーランドに住んでいた時は<br>
-                    キックボクシングを7ヶ月程してました。</p>
+                <img src="./img/main1.jpg" class="col-md-4 col-6 aboutLogo fly" style="height: auto;" alt="logo">
+                <p class="col-md-6 text-center fly">2019年3月からプログラミング学習を開始。<br>HTML,CSS, JS, jQuery, Ruby, Ruby on Rails, Linux, React.js, Laravel, PHP, SQL, MySQL, C#, を学習。<br>
+                    Portfolioサイト１つと,Railsを使用したWeb Applicationを1つ制作。<br>現在React.jsを使用したWeb Applicationを制作中です。</br>
+                    エクササイズが趣味でニュージーランドに住んでいた時は<br>
+                    キックボクシングを7ヶ月程してました。 
+                </p>
               </div>
           </div>
         <div>
@@ -82,18 +83,19 @@
                     <!------------------- skills ------------------->
                 <div class="col-md-3 ml-md-auto">
                     <i class="far fa-lightbulb faa-float animated skills-icon"></i>
-                    <h3>Programming</h3>
-                    <p>HTML&CSSを6ヶ月JS・jQueryを4ヶ月<br>Ruby・Ruby on Railsを４ヶ月程学習しながら<br>ポートフォリオサイト二つとWeb applicationを二つ作成しました</p>
+                    <h3 class="text-success mb-4"><b>Programming</b></h3>
+                    <p>・HTML&CSSを2年程学習<br>・JS・jQueryを1年程学習<br>・React.jsを6ヶ月程学習<br>・Railsを４ヶ月程学習<br>・Linuxを3ヶ月程学習<br>・Laravelを6ヶ月程学習<br>・SQLを6ヶ月程学習<br>・PHPを6ヶ月程学習<br>
+                        ・MySQLを6ヶ月程学習<br>・C#を3ヶ月程学習</p>
                 </div>
                 <div class="col-md-3 ml-md-auto">
                     <i class="fas fa-globe-americas faa-float animated skills-icon"></i>
-                    <h3>English</h3>
-                    <p>オーストラリアとニュージーランドに２年間滞在していました<br>海外ドラマや英語で書いてある本を読んだりするのは趣味の一つです</p>
+                    <h3 class="text-success mb-4"><b>English</b></h3>
+                    <p>オーストラリアとニュージーランドに２年間語学習得の為滞在していました。オンライン英会話を現在でも6ヶ月程続けていて<br>洋画や洋書を読むのが趣味です。</p>
                 </div>
                 <div class="col-md-3 ml-md-auto">
                     <i class="fas fa-dumbbell faa-float animated skills-icon"></i>
-                    <h3>Training</h3>
-                    <p>運動するのが趣味でジムに週５通ってトレーニングしたり<br>学生時代の仲間と一緒にサッカーしたりして汗を流しています</p>
+                    <h3 class="text-success mb-4"><b>Training</b></h3>
+                    <p>運動するのが趣味でジムで週４日トレーニングしたり自然の中でのランニング<br>学生時代の仲間とサッカーを通して話したりするのが自分の息抜きになってます。</p>
                 </div>
             </div>
         </div>
@@ -117,7 +119,7 @@
                          </div>
                      </div>
                         <!------------------- card2 ------------------->
-                      <div class="py-4 col-6 col-md-4 fly">
+                      <!-- <div class="py-4 col-6 col-md-4 fly">
                         <div class="card mb-3">
                             <img class="card-img-top img-fluid" src="./img/tips.png" alt="card2">
                               <div class="card-body d-flex justify-content-between">
@@ -125,14 +127,14 @@
                                  <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#modal02">Check</button>
                               </div>
                         </div>
-                      </div>
+                      </div> -->
 
                     <!------------------- modal ------------------->
                     <div class="modal fade" id="modal01" tabindex="-1" role="dialog" aria-labelledby="modal01-label" aria-hidden="true">
                         <div class="modal-dialog modal-dialog-centered" role="document">
                             <div class="modal-content">
                                 <div class="modal-header">
-                                    <h5 class="modal-title" id="modal01-label">Sugget</h5>
+                                    <h5 class="modal-title" id="modal01-label">知人や身の回りの人と話す時にしてみたいが何から始めれば良いか分からないと聞くことが多くあり、自分自身始める時は時間がかかるが経験さえあればその次のステップは格段にスムーズに進むことを理解していた為、もし何から初めて良いかも分からない方に対して知識や経験がある提案者がこれから何か始める初心者の質問に対し、”提案する”と言う形で最初のステップを今まで以上に短く実践的にし、行動の必要性をお伝えすることができたらと思いこのアプリを作りました。</h5>
                                         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                                             <span aria-hidden="true">&times;</span>
                                         </button>
@@ -161,10 +163,10 @@
                                     </button>
                                 </div>
                                 <!------------------- modal body ------------------->
-                                <div class="modal-body">
+                                <!-- <div class="modal-body">
                                     <p class="text-center"><a href="#"><img src="img/tips.png" alt="logo2" class="img-fluid"></a></p>
                                     <p>Tips App </p>
-                                </div>
+                                </div> -->
                                 <!------------------- card footer ------------------->
                                 <div class="modal-footer">
                                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
