--- a/index.html
+++ b/index.html
@@ -65,8 +65,9 @@
             <h2 class="text-center display-3 heading full-block fly">About Me</h2>
               <div class="row mt-2 align-items-center">
                 <img src="./img/main1.jpg" class="col-md-4 col-6 aboutLogo fly" style="height: auto;" alt="logo">
-                <p class="col-md-6 text-center fly">2019年3月からプログラミング学習を開始。<br>HTML,CSS, JS, jQuery, Ruby, Ruby on Rails, Linux, React.js, Laravel, PHP, SQL, MySQL, C#, を学習。<br>
-                    Portfolioサイト１つと,Railsを使用したWeb Applicationを1つ制作。<br>現在React.jsを使用したWeb Applicationを制作中です。</br>
+                <p class="col-md-6 text-center fly">鳥取県のタクシー会社の給与管理システムの設計書の作成、開発、単体・結合テストを担当しました。<br>フロントエンドにReact.jsを使用し作成。HTTP requestを行う際にJSのライブラリであるaxiosを使用し実装しました。バックエンドにはPHPを使用し登録、検索、更新、削除、帳票出力機能の開発を行いました。フレームワークにLaravel、DBにMySQLを使用し開発時のweb serverにはApacheを使用しました。
+                    <br>
+                    個人でPortfolioサイト１つと,Ruby on Railsを使用した<br><a href="#suggest" class="link">Web Application</a>を1つ制作しました。<br>現在React.jsを使用したWeb Applicationを制作中です。</br>
                     エクササイズが趣味でニュージーランドに住んでいた時は<br>
                     キックボクシングを7ヶ月程してました。 
                 </p>
@@ -84,18 +85,18 @@
                 <div class="col-md-3 ml-md-auto">
                     <i class="far fa-lightbulb faa-float animated skills-icon"></i>
                     <h3 class="text-success mb-4"><b>Programming</b></h3>
-                    <p>・HTML&CSSを2年程学習<br>・JS・jQueryを1年程学習<br>・React.jsを6ヶ月程学習<br>・Railsを４ヶ月程学習<br>・Linuxを3ヶ月程学習<br>・Laravelを6ヶ月程学習<br>・SQLを6ヶ月程学習<br>・PHPを6ヶ月程学習<br>
-                        ・MySQLを6ヶ月程学習<br>・C#を3ヶ月程学習</p>
+                    <p>・保守業務でHTML&CSSを使用<br>・JSを使用した開発経験有り<br>・React.jsを使用した開発経験有り<br>・Ruby on Railsを使用したWeb &nbsp;&nbsp;&nbsp;&nbsp;Applicationを1つ制作<br>・保守業務でLinuxを使用<br>・Laravelを使用した開発経験有り<br>・SQLを使用した開発経験有り<br>・PHPを使用した開発経験有り<br>
+                        ・MySQLを使用した開発経験有り<br>・保守業務でC#を使用</p>
                 </div>
                 <div class="col-md-3 ml-md-auto">
                     <i class="fas fa-globe-americas faa-float animated skills-icon"></i>
                     <h3 class="text-success mb-4"><b>English</b></h3>
-                    <p>オーストラリアとニュージーランドに２年間語学習得の為滞在していました。オンライン英会話を現在でも6ヶ月程続けていて<br>洋画や洋書を読むのが趣味です。</p>
+                    <p>オーストラリアとニュージーランドに２年間語学習得の為滞在していました。オンライン英会話を現在でも6ヶ月程続けていて、洋画を見たり洋書を読むのが趣味です。</p>
                 </div>
                 <div class="col-md-3 ml-md-auto">
                     <i class="fas fa-dumbbell faa-float animated skills-icon"></i>
                     <h3 class="text-success mb-4"><b>Training</b></h3>
-                    <p>運動するのが趣味でジムで週４日トレーニングしたり自然の中でのランニング<br>学生時代の仲間とサッカーを通して話したりするのが自分の息抜きになってます。</p>
+                    <p>運動するのが趣味でジムで週４日トレーニングしたり自然の中でのランニング、学生時代の仲間とサッカーを通して話したりするのが自分の息抜きになってます。</p>
                 </div>
             </div>
         </div>
@@ -110,7 +111,7 @@
               <div class="row justify-content-center">
                      <!-- card1 -->
                      <div class="py-4 col-6 col-md-4 fly">  
-                        <div class="card mb-3">
+                        <div class="card mb-3" id="suggest">
                           <img class="card-img-top img-fluid" src="./img/suggest.png" alt="card1">
                             <div class="card-body d-flex justify-content-between">
                                 <h4 class="card-title text-secondary">Suggest</h4>
